--- a/portfolio/templates/portfolio/stock_list.html
+++ b/portfolio/templates/portfolio/stock_list.html
@@ -53,8 +53,8 @@
                      <td><a href="{% url 'portfolio:stock_edit' pk=stock.pk %}"
                            class="btn btn-warning">Edit</a></td>
 
-                    <td><a href=""
-
+                    <td><a href="{% url 'portfolio:stock_delete' pk=stock.pk %}"
+                           onclick="return confirm('Are you sure you want to delete?')"
                            class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
